--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,14 @@ repositories{
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "de.infoware:mti:8.4.3"
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    implementation 'com.amitshekhar.android:jackson-android-networking:1.0.2'
 
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
