--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.amitshekhar.android:jackson-android-networking:1.0.2'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+
 
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation 'androidx.appcompat:appcompat:1.1.0'
